[package]
name = "crypto-paillier"
description = "Paillier Cryptosystem"
repository = "https://github.com/saltatory/paillier"
homepage = "https://github.com/saltatory/paillier"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey Hohenstein <jeffrey.hohenstein@gmail.com>"]
license = "BUSL-1.1"

[dependencies]
crypto-bigint = {workspace = true}
crypto-primality = { path = "../primality" }

# Add rendering of LaTeX math symbols in documentation
#
# Example: to generate docs locally
#
# RUSTDOCFLAGS="--html-in-header $(pwd)/katex-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = {workspace = true}
