[package]
name = "ziglet-paillier"
description = "Paillier Cryptosystem"
repository = "https://github.com/ziglet-io/paillier"
homepage = "https://github.com/ziglet-io/paillier"
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[dependencies]
crypto-bigint.workspace = true
ziglet-primality= {path = "../primality"}

# Add rendering of LaTeX math symbols in documentation
#
# Example: to generate docs locally
#
# RUSTDOCFLAGS="--html-in-header $(pwd)/katex-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = {workspace = true}
