[package]
name = "ziglet-paillier"
description = "Paillier Cryptosystem"
repository = "https://github.com/ziglet-io/paillier"
homepage = "https://github.com/ziglet-io/paillier"
readme = "README.md"

version = "0.1.0"
edition = "2021"
authors = ["Jeffrey Hohenstein <jeffrey.hohenstein@gmail.com>"]
license = "MIT"

[dependencies]
crypto-bigint = {version = "0.6.0" }
ziglet-primality= {version = "0.1.0", path = "../primality"}

# Add rendering of LaTeX math symbols in documentation
#
# Example: to generate docs locally
#
# RUSTDOCFLAGS="--html-in-header $(pwd)/katex-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = {version = "0.5.1", features = ["async_tokio", "async"]}
